<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailActivity">

    <EditText

        android:id="@+id/editTextTaskDetailHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        android:hint="@string/task_detail_header_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTaskDetailBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"

        android:hint="@string/task_detail_body_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDetailHeader" />


    <EditText
        android:id="@+id/editTextDate"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/task_detail_date_hint"
        android:ems="10"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskDetailBody" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.1"
        android:text="@string/task_detail_fab_description"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:maxImageSize="18dp"
        app:backgroundTint="@color/highPriority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        app:backgroundTint="@color/mediumPriority"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:maxImageSize="18dp"
        app:layout_constraintStart_toEndOf="@id/floatingActionButtonHigh"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:src="@drawable/ic_pick"
        app:backgroundTint="@color/lowPriority"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:maxImageSize="18dp"
        app:layout_constraintStart_toEndOf="@id/floatingActionButtonMedium"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:focusable="true" />

    <Button
        android:id="@+id/buttonCreateTask"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:minHeight="36dp"
        android:maxHeight="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:letterSpacing="0.2"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/task_detail_button"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButtonLow" />


</androidx.constraintlayout.widget.ConstraintLayout>